--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZeddyGabo.</title>
-    <link rel="shortcut icon" href="assets/logo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="shortcut icon" href="./assets/logo.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <div class="nav-bar">
         <div class="logo">
-            <img src="assets/logo.jpg" alt="Wala">
+            <img src="./assets/logo.jpg" alt="Wala">
             <h1>Codego.</h1>
         </div>
         <div class="nav-links">
@@ -35,7 +35,7 @@
             <a href="#page?=Tutorial"><input id="learn" type="button" value="Learn now"></a>
             <a href="https://github.com/IzanamiiDevv?tab=repositories"><input id="more" type="button" value="More"></a>
         </form>
-        <img id="home-img" src="assets/logo.jpg" alt="Cant Load The Image">
+        <img id="home-img" src="./assets/logo.jpg" alt="Cant Load The Image">
     </div>
 </body>
 </html>
