--- a/Johna/index.html
+++ b/Johna/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
-        <title>CODECRAFT</title>
+        <link rel="stylesheet" href="assets/home.css">
+        <title>Code Craft</title>
     </head>
     <body>
      
