--- a/Johna/index.html
+++ b/Johna/index.html
@@ -6,22 +6,21 @@
     </head>
     <body>
       
-    <nav class="anchor">
-        <ul>
-            <li>CodeCraft.</li>
-            <li><a href="#">Home</li>
-            <li><a href="#">About</li>
-            <li><a href="#">Tutorials</li>
-            <li><a href="#">Menu</li>
-        </ul>                
-    </nav>
-   
-
-    <h1><b>Welcome To Code Craft !!</b></h1>
-
-   <p> In this Website will help you to get free tutorials in coding mostly when you're a beginner in coding this can help you improve your coding skills
-
-   </p>
+    <div>
+        <nav class="anchor">
+            <ul>
+                <li>CodeCraft.</li>
+                <li><a href="#">Home</li>
+                <li><a href="#">About</li>
+                <li><a href="#">Tutorials</li>
+                <li><a href="#">Menu</li>
+            </ul>                
+        </nav>
+        <h1>Welcome To CodeCraft!</h1>
+        <p>
+            In this Website will help you to get free tutorials in coding mostly when you're a beginner in coding this can help you improve your coding skills.
+        </p>
+    </div>
        
     </body>
 </html>
