--- a/Johna/index.html
+++ b/Johna/index.html
@@ -6,14 +6,14 @@
     </head>
     <body>
       
-    <div>
+    <div id="page=?Home">
         <nav class="anchor">
             <ul>
                 <li>CodeCraft.</li>
-                <li><a href="#">Home</li>
-                <li><a href="#">About</li>
-                <li><a href="#">Tutorials</li>
-                <li><a href="#">Menu</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Tutorials</a></li>
+                <li><a href="#">Menu</a></li>
             </ul>                
         </nav>
         <h1>Welcome To CodeCraft!</h1>
