--- a/Johna/index.html
+++ b/Johna/index.html
@@ -7,9 +7,9 @@
     <body>
       
     <div id="page=?Home">
-        <nav class="anchor">
+        <nav class="navbar">
             <ul>
-                <li>CodeCraft.</li>
+                <li id="nav-title">CodeCraft.</li>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Tutorials</a></li>
