--- a/Gabrielle/index.html
+++ b/Gabrielle/index.html
@@ -6,36 +6,37 @@
     <title>ZeddyGabo.</title>
     <link rel="shortcut icon" href="./assets/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/tutorial.css">
 </head>
 <body>
+    <!--Navigation Bar-->
     <div class="nav-bar">
         <div class="logo">
             <img src="./assets/logo.jpg" alt="Wala">
-            <h1>Codego.</h1>
+            <h3>Palitan Mo.</h3>
         </div>
         <div class="nav-links">
             <a href="#">Home</a>
-            <a href="#">Tutorial</a>
+            <a href="#page?=Tutorial">Tutorial</a>
             <a href="#">About</a>
-            <a href="#">Credits</a>
         </div>
     </div>
-    <div class="homepage">
+    <!--Homepage-->
+    <div class="homepage" id="#">
         
         <h1 id="title">Welcome to ZeddyGabo.</h1>
         
         <p id="subtitle">
-            This project serves as my performance task for school,<br>
-             where I was assigned to create a documentation webpage on<br>
-             web development.The purpose of this documentation<br>
-            is to provide a comprehensive overview of key concepts and<br>
-            practices in web development.
+            A Basic Website Tutorial That Teach You More About Programming
         </p>
-        <form>
+        <div class="input" align="center">
             <a href="#page?=Tutorial"><input id="learn" type="button" value="Learn now"></a>
-            <a href="https://github.com/IzanamiiDevv?tab=repositories"><input id="more" type="button" value="More"></a>
-        </form>
-        <img id="home-img" src="./assets/logo.jpg" alt="Cant Load The Image">
+            <a href="#page?=More"><input id="more" type="button" value="More"></a>
+        </div>
+    </div>
+    <!--Tutorial-->
+    <div class="pages" id="page?=Tutorial">
+        <h1>Dito Mo Lagay Tutorial</h1>
     </div>
 </body>
 </html>
